<RelativeLayout
    android:id="@+id/layout_registerContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alawson.netwrk.LoginActivity" >
	<TextView
		android:id="@+id/textView_registerTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="30dp"
		android:textAppearance="?android:attr/textAppearance"
		android:text="@string/string_registerTitle"
	/>
   	<EditText
        android:id="@+id/editText_registerUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView_registerTitle"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:ems="10"
        android:hint="@string/string_registerUsername"
        android:inputType="textEmailAddress"
	/>
   	<EditText
        android:id="@+id/editText_registerPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText_registerUsername"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:ems="10"
        android:hint="@string/string_registerPassword"
        android:inputType="textPassword"
	/>
   	<EditText
        android:id="@+id/editText_registerPasswordConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText_registerPassword"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:ems="10"
        android:hint="@string/string_registerPasswordConfirm"
        android:inputType="textPassword"
	/>
    <EditText
        android:id="@+id/editText_registerFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText_registerPasswordConfirm"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:ems="10"
        android:hint="@string/string_registerFirstName"
        android:inputType="textPersonName"
	/>
    <EditText
        android:id="@+id/editText_registerLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText_registerFirstName"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:ems="10"
        android:hint="@string/string_registerLastName"
        android:inputType="textPersonName"
	/>
    <EditText
        android:id="@+id/editText_registerEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText_registerLastName"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:ems="10"
        android:hint="@string/string_registerEmail"
        android:inputType="textEmailAddress"
	/>
    <Button
        android:id="@+id/button_registerRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText_registerEmail"
        android:layout_marginBottom="30dp"
        android:text="@string/string_registerRegister"
   	/>
</RelativeLayout>
