<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alawson.netwrk.HomeActivity" >
    <Button
        android:id="@+id/button_homeConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/string_homeConnect"
    />
    <Button
        android:id="@+id/button_homeConnections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_homeConnect"
        android:layout_marginTop="20dp"
        android:text="@string/string_homeConnections"
    />
    <Button
        android:id="@+id/button_homeAquiantances"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_homeConnections"
        android:layout_marginTop="20dp"
        android:text="@string/string_homeAquiantances"
    />
    <Button
        android:id="@+id/button_homeSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_homeAquiantances"
        android:layout_marginTop="20dp"
        android:text="@string/string_homeSettings"
    />
    <TextView
        android:id="@+id/textView_homeIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_homeConnect"
        android:layout_alignBottom="@+id/button_homeConnect"
        android:layout_toRightOf="@+id/button_homeAquiantances"
        android:text="@string/string_homeIndicator"
        android:textAppearance="?android:attr/textAppearanceSmall"
     />
</RelativeLayout>
