<RelativeLayout
    android:id="@+id/layout_registerContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alawson.netwrk.ForgotActivity" >
	<TextView
		android:id="@+id/textView_forgotTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="30dp"
		android:textAppearance="?android:attr/textAppearance"
		android:text="@string/string_forgotTitle"
	/>
   	<EditText
        android:id="@+id/editText_forgotUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView_forgotTitle"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:ems="10"
        android:hint="@string/string_forgotUsername"
        android:inputType="textEmailAddress"
	/>
    <EditText
        android:id="@+id/editText_forgotEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText_forgotUsername"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:ems="10"
        android:hint="@string/string_forgotEmail"
        android:inputType="textEmailAddress"
	/>
   	<Button
        android:id="@+id/button_forgotForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText_forgotEmail"
        android:layout_marginBottom="30dp"
        android:text="@string/string_forgotForgot"
   	/>
</RelativeLayout>
