<RelativeLayout
    android:id="@+id/layout_loginContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alawson.netwrk.LoginActivity" >
	<TextView
		android:id="@+id/textView_loginTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="10dp"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/string_loginTitle"
	/>
   	<EditText
   	    android:id="@+id/editText_loginUsername"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_below="@+id/textView_loginTitle"
   	    android:layout_centerHorizontal="true"
   	    android:layout_marginBottom="10dp"
   	    android:ems="10"
   	    android:inputType="textEmailAddress"
   	    android:textStyle="normal"
   	    android:typeface="sans"
   	/>
   	<EditText
        android:id="@+id/editText_loginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText_loginUsername"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPassword"
	/>
   	<Button
        android:id="@+id/button_loginLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText_loginPassword"
        android:layout_marginBottom="5dp"
        android:text="@string/string_loginLogin"
   	/>
   	<Button
        android:id="@+id/button_loginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_loginLogin"
        android:layout_marginBottom="30dp"
        android:text="@string/string_loginRegister"
   	/>
</RelativeLayout>